--- a/app.json
+++ b/app.json
@@ -6,8 +6,7 @@
   "window": {
     "backgroundTextStyle": "dark",
     "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "WeChat",
-    "navigationBarTextStyle": "black",
-    "enablePullDownRefresh": true
+    "navigationBarTitleText": "新闻小程序",
+    "navigationBarTextStyle": "black"
   }
 }
